--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     mssql-express:
         image: microsoft/mssql-server-windows-express
         environment:
-            sa_password: sys_4dmin!
+            sa_password: L$clF^i2pue@8y
             accept_eula: Y
         ports:
           - 1533:1433 # Use port 1533 to connect from the host machine using SSMS
